tests/fail/ipnet6.stderr
error: invalid IP address syntax
 --> tests/fail/ipnet6.rs:4:21
  |
4 |     let _ = ipnet6!("2001:db8::32::23/129");
  |                     ^^^^^^^^^^^^^^^^^^^^^^

error: invalid IP address syntax
 --> tests/fail/ipnet6.rs:5:21
  |
5 |     let _ = ipnet6!("2001:db8::32:23/129");
  |                     ^^^^^^^^^^^^^^^^^^^^^
